# Melosyne-Math

./: .clang-tidy  .gitignore  3D_MATH_DEVELOPMENT_SUMMARY.md  AABB3_CONTAINS_OPTIMIZATION_REPORT.md  AGENTS.md  API_QUICK_REFERENCE.md  API_REFERENCE.md  BITOPS_GUIDE.md  BITOPS_README.md  CLEANUP_PLAN.md  CMakeLists.txt  FILE_STRUCTURE.md  FINAL_OPTIMIZATION_REPORT.md  IMPLEMENTATION_PLAN.md  MAT4_D3D_OPTIMIZATION_REPORT.md  MAT4_SIMD_OPTIMIZATION_REPORT.md  PERFORMANCE_REPORT.md  PERFORMANCE_TESTING_GUIDE.md  PERFORMANCE_TEST_RESULTS.md  PerformanceBenchmark.cpp  README.md  READY_TO_TEST.md  REFACTORING_COMPLETE.md  REFACTORING_GUIDE.md  REFACTORING_PLAN.md  TESTING_INFRASTRUCTURE_COMPLETE.md  TestAllWindowsConflicts.cpp  TestMMathRename.cpp  TestWindowsConflict.cpp  benchmark_bit_ops.cpp  benchmark_common.cpp  benchmark_lerp_full.cpp  benchmark_lerp_simple.cpp  benchmark_lerp_strict.cpp  benchmark_power_full.cpp  benchmark_sqrt.cpp  benchmark_sqrt_full.cpp  debug_boundary.cpp  debug_failures.cpp  debug_log.cpp  (+14 more)
.github/workflows/: ci.yml
bench/: main.cpp
bench/adapters/: external_backends.h
bench/framework/: benchmark_framework.cpp  benchmark_framework.h
bench/suites/: bench_bitset_datapath.cpp  bench_geometry_bitops.cpp  bench_quat.cpp  bench_scalar.cpp  bench_vector_matrix.cpp
benchmark/: bench_aabb2.cpp  bench_aabb2_triple.cpp  bench_aabb3.cpp  bench_aabb3_comparison.cpp  bench_aabb3_contains_optimization.cpp  bench_fast.cpp  bench_fast_vs_perf.cpp  bench_lookat_isolated.cpp  bench_mat3.cpp  bench_mat3_triple.cpp  bench_mat3_vs_perf.cpp  bench_mat4_triple.cpp  bench_simd.cpp  bench_translation_isolated.cpp  bench_vec2.cpp  bench_vec2_vs_perf.cpp
docs/: MAT4_BENCHMARK_REPORT.md  STORAGE_LAYOUT.md  VEC3_OPTIMIZATION_REPORT.md  VEC3_SIMD_REPORT.md  VEC4_BENCHMARK_REPORT.md  VEC4_IMPLEMENTATION.md  VEC4_OPTIMIZATION_REPORT.md
docs/benchmarks/: BITSET_BASELINE_2026-04-23.md  BITSET_OPTIMIZATION_REPORT_2026-04-23.md  baseline_bitops_2026-04-23.txt  baseline_datastructure_2026-04-23.txt  dynamic_vs_stdbitset_2026-04-23.txt  postopt_bitops_2026-04-23_v3.txt  postopt_datastructure_2026-04-23_v3.txt
include/fast_math/: aabb2.h  aabb2_simd.h  aabb3.h  aabb3_contains_optimized.h  bit_ops.h  bit_ops_advanced.h  bit_ops_advanced_simd.h  bit_ops_core.h  bit_ops_core_simd.h  bit_ops_count.h  bit_ops_count_simd.h  bit_ops_range.h  bit_ops_range_simd.h  bit_ops_scan.h  bit_ops_scan_simd.h  bitset_dynamic.h  bitset_static.h  bitset_view.h  common.h  common_simd.h  config_macros.h  lerp.h  lerp_simd.h  mat3.h  mat3_simd.h  mat4.h  mat4_d3d.h  power.h  power_simd.h  quat.h  quat_simd.h  sqrt.h  sqrt_simd.h  trig.h  trig_simd.h  types.h  vec2.h  vec2_simd.h  vec3.h  vec3_simd.h  (+1 more)
include/fast_math/detail/: aabb2_batch.inl  aabb2_core.inl  aabb2_simd_detail.inl  aabb3_core.inl  bit_ops_advanced_core.inl  bit_ops_advanced_simd_detail.inl  bit_ops_core_scalar.inl  bit_ops_core_simd_detail.inl  bit_ops_count_core.inl  bit_ops_count_simd_detail.inl  bit_ops_dispatch_policy.inl  bit_ops_namespace_bridge.inl  bit_ops_range_core.inl  bit_ops_range_simd_detail.inl  bit_ops_scan_core.inl  bit_ops_scan_simd_detail.inl  bitops_namespace_alias.inl  bitset_dynamic_core.inl  bitset_static_core.inl  bitset_types_namespace_bridge.inl  bitset_view_core.inl  bitset_view_dynamic_constructors.inl  common_core.inl  common_simd_detail.inl  lerp_core.inl  lerp_simd_detail.inl  mat3_batch.inl  mat3_checked_inverse.inl  mat3_core.inl  mat3_simd_detail.inl  mat4_checked_inverse.inl  mat4_core.inl  power_scalar.inl  power_simd.inl  quat_convert.inl  quat_core.inl  quat_simd_detail.inl  sqrt_core.inl  sqrt_simd_detail.inl  trig_core.inl  (+10 more)
modules/fast_math/: aabb2.cppm  aabb2_simd.cppm  aabb3.cppm  all.cppm  bit_ops.cppm  bit_ops_advanced.cppm  bit_ops_advanced_simd.cppm  bit_ops_core.cppm  bit_ops_core_simd.cppm  bit_ops_count.cppm  bit_ops_count_simd.cppm  bit_ops_range.cppm  bit_ops_range_simd.cppm  bit_ops_scan.cppm  bit_ops_scan_simd.cppm  bitset_dynamic.cppm  bitset_static.cppm  bitset_view.cppm  common.cppm  common_simd.cppm  lerp.cppm  lerp_simd.cppm  mat3.cppm  mat3_simd.cppm  mat4.cppm  mat4_d3d.cppm  power.cppm  power_simd.cppm  quat.cppm  quat_simd.cppm  sqrt.cppm  sqrt_simd.cppm  trig.cppm  trig_simd.cppm  types.cppm  vec2.cppm  vec2_simd.cppm  vec3.cppm  vec3_simd.cppm  vec4.cppm
test/: main.cpp  module_parity_smoke.cpp  module_smoke.cpp
test/framework/: test_framework.cpp  test_framework.h  test_utils.h
test/suites/: test_aabb_ops.cpp  test_bit_ops.cpp  test_bitset_namespace_bridge.cpp  test_common_lerp.cpp  test_external_consistency.cpp  test_mat_ops.cpp  test_quat_ops.cpp  test_sqrt_power_trig.cpp  test_vec_ops.cpp
tests/: test_aabb3_basic.cpp  test_mat4_basic.cpp
tools/: check_no_trailing_underscore_vars.ps1
